--- a/CepcmApp/Config_plist/Config.plist
+++ b/CepcmApp/Config_plist/Config.plist
@@ -4,18 +4,22 @@
 <dict>
 	<key>Ambiente</key>
 	<string>Desarrollo</string>
-    <key>Requests</key>
-    <dict>
-        <key>Produccion</key>
-        <dict>
-            <key>LOGIN</key>
-            <string>https://urlprologin.gnp.com.mx/auth/login</string>
-        </dict>
-        <key>DES</key>
-        <dict>
-            <key>LOGIN</key>
-            <string>http://urldeslogin.gnp.com.mx/auth/login</string>
-        </dict>
-    </dict>
+	<key>Requests</key>
+	<dict>
+		<key>Produccion</key>
+		<dict>
+			<key>LOGIN</key>
+			<string>https://urlprologin.gnp.com.mx/auth/login</string>
+			<key>VALIDA_CUENTA_ALUMNO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/accesoController/validarCuentaAlumno</string>
+		</dict>
+		<key>Desarrollo</key>
+		<dict>
+			<key>LOGIN</key>
+			<string>http://urldeslogin.gnp.com.mx/auth/login</string>
+			<key>VALIDA_CUENTA_ALUMNO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/accesoController/validarCuentaAlumno</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
