Se agregan cambios estables 20181019

--- a/CepcmApp/Config_plist/Config.plist
+++ b/CepcmApp/Config_plist/Config.plist
@@ -8,6 +8,12 @@
 	<dict>
 		<key>Produccion</key>
 		<dict>
+			<key>OAUTH_TOKEN</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/oauth/token</string>
+			<key>MATERIAS_POR_ALUMNO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/api/materiaCarreraController/materiasPorAlumno</string>
+			<key>PERSISTIR_DISPOSITIVO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/api/dispositivoController/persisteRegistroDispositivo</string>
 			<key>PERSISTIR_ID_FIREBASE_POR_USUARIO</key>
 			<string>http://187.190.149.140:8083/CEPCM_MOVIL/accesoController/persistirIdFirebasePorUsuario</string>
 			<key>LOGIN</key>
@@ -17,6 +23,12 @@
 		</dict>
 		<key>Desarrollo</key>
 		<dict>
+			<key>OAUTH_TOKEN</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/oauth/token</string>
+			<key>MATERIAS_POR_ALUMNO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/api/materiaCarreraController/materiasPorAlumno</string>
+			<key>PERSISTIR_DISPOSITIVO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/api/dispositivoController/persisteRegistroDispositivo</string>
 			<key>PERSISTIR_ID_FIREBASE_POR_USUARIO</key>
 			<string>http://187.190.149.140:8083/CEPCM_MOVIL/accesoController/persistirIdFirebasePorUsuario</string>
 			<key>LOGIN</key>
