--- a/CepcmApp/Config_plist/Config.plist
+++ b/CepcmApp/Config_plist/Config.plist
@@ -8,6 +8,8 @@
 	<dict>
 		<key>Produccion</key>
 		<dict>
+			<key>CALIFICACIONES_POR_ALUMNO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/api/calificacionAlumnoCarreraController/calificacionesPorAlumno</string>
 			<key>OAUTH_TOKEN</key>
 			<string>http://187.190.149.140:8083/CEPCM_MOVIL/oauth/token</string>
 			<key>MATERIAS_POR_ALUMNO</key>
@@ -23,6 +25,8 @@
 		</dict>
 		<key>Desarrollo</key>
 		<dict>
+			<key>CALIFICACIONES_POR_ALUMNO</key>
+			<string>http://187.190.149.140:8083/CEPCM_MOVIL/api/calificacionAlumnoCarreraController/calificacionesPorAlumno</string>
 			<key>OAUTH_TOKEN</key>
 			<string>http://187.190.149.140:8083/CEPCM_MOVIL/oauth/token</string>
 			<key>MATERIAS_POR_ALUMNO</key>
